--- a/public/css/basic.css
+++ b/public/css/basic.css
@@ -129,9 +129,32 @@ div.screen-width{
     width: 24rem;
 }
 
+.w-descriptionSemesterStack {
+    width: 16rem;
+}
+
+.w-wideSemesterStack {
+    width: 48rem;
+}
+
 @media (max-width: 640px) {
     .w-semesterStack {
         width: 90%;
+    }
+    .w-descriptionSemesterStack {
+        width: 90%;
+    }
+    .w-wideSemesterStack {
+        width: 90%;
+    }
+}
+
+@media (min-width: 640px) {
+    .w-descriptionSemesterStack {
+        width: 25%;
+    }
+    .w-wideSemesterStack {
+        width: 65%;
     }
 }
 
