Added sub hidden mc page

--- a/public/css/basic-analog.css
+++ b/public/css/basic-analog.css
@@ -72,7 +72,7 @@ div.flex-tag {
 }
 
 p.analog-font, div.analog-box {
-    font-family: "Pixelify Sans";
+    font-family: "Jersey 10";
 }
 
 p.normal-font {
